[project]
name = "promptguard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "structlog>=25.4.0",
]

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "pip>=25.2",
    "pre-commit>=4.3.0",
    "pyright>=1.1.404",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]
ml = [
    "sentence-transformers>=5.1.0",
]
nlp = [
    "spacy>=3.8.7",
]
